fix bugs in badge cart, adding product without attribute from PLP, and currency switcher drodown that shifted to right

--- a/src/components/PriceSwitcher/PriceSwitcher.scss
+++ b/src/components/PriceSwitcher/PriceSwitcher.scss
@@ -4,7 +4,7 @@
   position: fixed;
   z-index: 100;
   top: 65px;
-  right: 5%;
+  right: 8%;
   background-color: #ffffff;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
